Added configuration support for OCP authentication with helm

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -39,20 +39,20 @@ metadata:
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
             "size": "{{ .Values.cpfs.size }}",
             "storageClass": "{{ .Values.global.blockStorageClass }}",
-            "services": [
-              {
-                "name": "ibm-im-operator",
-                "spec": {
-                  "authentication": {
-                    "config": {
-                      "roksEnabled": "{{ .Values.cpfs.roksEnabled }}",
-                      "roksURL": "{{ .Values.cpfs.roksURL }}",
-                      "roksUserPrefix": "{{ .Values.cpfs.roksUserPrefix }}"
+            {{- if eq .values.cpfs.roksEnabled "false"}}
+              "services": [
+                {
+                  "name": "ibm-im-operator",
+                  "spec": {
+                    "authentication": {
+                      "config": {
+                        "roksEnabled": "false"
+                      }
                     }
                   }
                 }
-              }
-            ]
+              ]
+            {{- end }}
           }
         }
       ]
