add new permission for events operator (#2725)
* add new permission for events for mininal-rbac

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* remove get and patch permission for strimzipodsets/finalizers

Signed-off-by: Allen Li <liyuchen223@gmail.com>

* reduce permission for events operator

Signed-off-by: Allen Li <liyuchen223@gmail.com>

---------

Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role-sc2.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role-sc2.yaml
@@ -710,6 +710,18 @@ rules:
       - kafkamirrormaker2s/status
       - kafkarebalances/status
   - verbs:
+      - update
+    apiGroups:
+      - ibmevents.ibm.com
+    resources:
+      - kafkas/finalizers
+      - kafkanodepools/finalizers
+      - kafkaconnects/finalizers
+      - kafkaconnectors/finalizers
+      - kafkabridges/finalizers
+      - kafkamirrormaker2s/finalizers
+      - kafkarebalances/finalizers
+  - verbs:
       - get
       - list
       - watch
@@ -729,6 +741,12 @@ rules:
       - core.ibmevents.ibm.com
     resources:
       - strimzipodsets/status
+  - verbs:
+      - update
+    apiGroups:
+      - core.ibmevents.ibm.com
+    resources:
+      - strimzipodsets/finalizers
   - verbs:
       - get
       - list
