--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -11,12 +11,7 @@ rules:
   verbs:
   - get
   - list
-- verbs:
-  - get
-  apiGroups:
-  - config.openshift.io
-  resources:
-  - infrastructures
+# Infrastructure permission removed - OCP detection now uses MachineConfig API discovery
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
