--- a/helm-cluster-scoped/templates/cluster-rbac.yaml
+++ b/helm-cluster-scoped/templates/cluster-rbac.yaml
@@ -22,12 +22,7 @@ rules:
     verbs: 
       - get
       - list
-  - apiGroups: 
-      - config.openshift.io
-    resources: 
-      - infrastructures
-    verbs: 
-      - get
+  # Infrastructure permission removed - OCP detection now uses MachineConfig API discovery
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
