Fix indentation issue + comma issue
Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -38,20 +38,20 @@ metadata:
             "operatorNamespace": "{{ .Values.global.operatorNamespace }}",
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
             "size": "{{ .Values.cpfs.size }}",
-            "storageClass": "{{ .Values.global.blockStorageClass }}",
+            "storageClass": "{{ .Values.global.blockStorageClass }}"
             {{- if not .Values.cpfs.roksEnabled }},
-              "services": [
-                {
-                  "name": "ibm-im-operator",
-                  "spec": {
-                    "authentication": {
-                      "config": {
-                        "roksEnabled": "false"
-                      }
+            "services": [
+              {
+                "name": "ibm-im-operator",
+                "spec": {
+                  "authentication": {
+                    "config": {
+                      "roksEnabled": "false"
                     }
                   }
                 }
-              ]
+              }
+            ]
             {{- end }}
           }
         }
