Configure OCP Authentication Support (#2722)
* Add authentication configuration

Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

* Compare roksEnabled as boolean

Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

* Fix indentation issue + comma issue

Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

---------

Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -39,6 +39,20 @@ metadata:
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
             "size": "{{ .Values.cpfs.size }}",
             "storageClass": "{{ .Values.global.blockStorageClass }}"
+            {{- if not .Values.cpfs.roksEnabled }},
+            "services": [
+              {
+                "name": "ibm-im-operator",
+                "spec": {
+                  "authentication": {
+                    "config": {
+                      "roksEnabled": "false"
+                    }
+                  }
+                }
+              }
+            ]
+            {{- end }}
           }
         }
       ]
