add default imagePullSecret
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -21,4 +21,5 @@ global:
   imagePullPrefix: icr.io
   tetheredNamespaces: []
   operatorNamespace: operator-ns
+  imagePullSecret: ibm-entitlement-key
   instanceNamespace:
