add new permission to cd
Signed-off-by: Allen Li <liyuchen223@gmail.com>

--- a/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
+++ b/cp3pt0-deployment/common/nss-managed-bedrock-core-role.yaml
@@ -714,6 +714,8 @@ rules:
       - kafkabridges/finalizers
       - kafkamirrormaker2s/finalizers
       - kafkarebalances/finalizers
+      - kafkatopics/finalizers
+      - kafkausers/finalizers
   - verbs:
       - get
       - list
