Make roksEnabled default to true in the template in case the values.yaml used is different
Signed-off-by: Jeremy Cheng <jeremyjcheng@gmail.com>

--- a/helm/templates/operator-deployment.yaml
+++ b/helm/templates/operator-deployment.yaml
@@ -39,14 +39,14 @@ metadata:
             "servicesNamespace": "{{ .Values.global.instanceNamespace }}",
             "size": "{{ .Values.cpfs.size }}",
             "storageClass": "{{ .Values.global.blockStorageClass }}"
-            {{- if not .Values.cpfs.roksEnabled }},
+            {{- if not (.Values.cpfs.roksEnabled | default true) }},
             "services": [
               {
                 "name": "ibm-im-operator",
                 "spec": {
                   "authentication": {
                     "config": {
-                      "roksEnabled": {{ .Values.cpfs.roksEnabled }}
+                      "roksEnabled": {{ .Values.cpfs.roksEnabled | default true }}
                     }
                   }
                 }
